fixes mobile layout issue in vis6

--- a/static/css/articlesAggregation/vis5.css
+++ b/static/css/articlesAggregation/vis5.css
@@ -1,5 +1,5 @@
 .o-grid-row {
-  width: 300%;
+  width: 100%;
   overflow-x: scroll;
 }
 .circle {
